--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "2amigos/yii2-file-upload-widget": "~1.0",
     "kartik-v/yii2-widget-select2": "@dev",
     "kucha/ueditor": "*",
-    "kartik-v/yii2-date-range": "*"
+    "kartik-v/yii2-date-range": "*",
+    "linslin/yii2-curl": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.0.0",
