沃噻主机上传

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "kartik-v/yii2-widget-select2": "@dev",
     "kucha/ueditor": "*",
     "kartik-v/yii2-date-range": "*",
+    "phpnt/yii2-icheck": "^0.0.2",
     "linslin/yii2-curl": "*"
   },
   "require-dev": {
