逸仙流主机上传

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "https://asset-packagist.org"
+      "url": "https://packagist.laravel-china.org"
     }
   ]
 }
