--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "https://packagist.laravel-china.org"
+      "url": "https://asset-packagist.org"
     }
   ]
 }
