--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "kucha/ueditor": "*",
     "kartik-v/yii2-date-range": "*",
     "phpnt/yii2-icheck": "*",
-    "linslin/yii2-curl": "*"
+    "linslin/yii2-curl": "*",
+    "abei2017/yii2-wx": "^1.3"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.0.0",
